--- a/Aulas/index2.html
+++ b/Aulas/index2.html
@@ -75,6 +75,9 @@
         </center>
         <p align="center">Gostaria de enfatizar que o desenvolvimento contínuo de distintas formas de atuação apresenta tendências no sentido de aprovar a manutenção das direções preferenciais no sentido do progresso.</p>
     </div>
+    <br>
+    <br>
+    <cente></cente>
     
     
 
